src/snapshots/pg_when__when_utc_offset__test__parse_invalid_hour.snap
---
source: src/when_utc_offset.rs
expression: err
---
Error {
    input: "24",
    code: Verify,
}
