src/snapshots/pg_when__when_utc_offset__test__parse_invalid_minute.snap
---
source: src/when_utc_offset.rs
expression: err
---
Error {
    input: "60",
    code: Verify,
}
