src/snapshots/pg_when__when_utc_offset__test__parse_invalid_second.snap
---
source: src/when_utc_offset.rs
expression: err
---
0: at line 1, in Verify:
UTC+12:58:60
          ^
